// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders xlf to markdown parses inline code with liquid syntax wrapped in <x> tags 1`] = `
Array [
  "Sentence \`{{ ui-key.yacloud.common.label_tcp }} other\`.",
  "Another sentence \`{{user.name | capitalize}} other\`.",
]
`;

exports[`renders xlf to markdown renders autolink wrapped in <x> tags 1`] = `
Array [
  "Предложение номер один <https://www.google.com>.",
]
`;

exports[`renders xlf to markdown renders code wrapped in <x> tag 1`] = `
Array [
  "Предложение номер \`один\`.",
  "Предложение номер \`два\`.",
]
`;

exports[`renders xlf to markdown renders em wrapped in <x> tags 1`] = `
Array [
  "Предложение номер *один*.",
  "Предложение номер *два*.",
]
`;

exports[`renders xlf to markdown renders file wrapped in <x> tags 1`] = `
Array [
  "Sentence with {% src=\\"path/to/file\\" name=\\"readme.md\\" referrerpolicy=\\"no-referrer\\" rel=\\"noopener\\" target=\\"_blank\\" type=\\"text/plain\\" %}.",
]
`;

exports[`renders xlf to markdown renders heading with anchor wrapped in <x> tags 1`] = `"Heading with anchors {#anchor1} {#anchor2}"`;

exports[`renders xlf to markdown renders image with all attributes wrapped in <x> tags 1`] = `
Array [
  "Sentence ![image](image.png \\"hint\\" =100x100).",
]
`;

exports[`renders xlf to markdown renders inline html wrapped in <x> tags 1`] = `"Sentence<br>with <b>html</b>."`;

exports[`renders xlf to markdown renders link containing multiple sentences wrapped in <x> tags 1`] = `
Array [
  "[Link text sentence one!",
  "Link text sentence Two?](file.md \\"Link title sentence one.",
  "Link title sentence two!\\")",
]
`;

exports[`renders xlf to markdown renders link with title wrapped in <x> tags 1`] = `
Array [
  "Предложение номер [один](one.md \\"one\\").",
  "Предложение номер [два](two.md).",
]
`;

exports[`renders xlf to markdown renders liquid conditions wrapped in <x> tags 1`] = `"Sentence with {% if var == \\"val\\" %} val {% else %} other val {% endif %}."`;

exports[`renders xlf to markdown renders liquid filter wrapped in <x> tags 1`] = `"Sentence with filter {{ users | length }}."`;

exports[`renders xlf to markdown renders liquid function wrapped in <x> tags 1`] = `"Sentence with function {{ user.name.slice(1, 2) }}."`;

exports[`renders xlf to markdown renders liquid loop wrapped in <x> tags 1`] = `"Sentence {% for x in xs %} x {% endfor %}."`;

exports[`renders xlf to markdown renders liquid variables wrapped in <x> tags 1`] = `"Sentence with {{ variable }}."`;

exports[`renders xlf to markdown renders plain text 1`] = `"Sentence about something. Another sentence."`;

exports[`renders xlf to markdown renders ref link wrapped in <x> tags 1`] = `
Array [
  "Предложение номер [{#T}](one.md \\"one\\").",
  "Предложение номер [{#T}](two.md).",
]
`;

exports[`renders xlf to markdown renders s wrapped in <x> tags 1`] = `
Array [
  "Предложение номер ~~один~~.",
  "Предложение номер ~~два~~.",
]
`;

exports[`renders xlf to markdown renders samp wrapped in <x> tags 1`] = `
Array [
  "Предложение номер ##один##.",
  "Предложение номер ##два##.",
]
`;

exports[`renders xlf to markdown renders strong wrapped in <x> tags 1`] = `
Array [
  "Предложение номер **один**.",
  "Предложение номер **два**.",
]
`;

exports[`renders xlf to markdown renders sup wrapped in <x> tags 1`] = `
Array [
  "Предложение номер^один^.",
  "Предложение номер^два^.",
]
`;

exports[`renders xlf to markdown renders variable href link wrapped in <x> tags 1`] = `
Array [
  "Предложение номер [один]({{one}} \\"one\\").",
]
`;

exports[`renders xlf to markdown renders video wrapped in <x> tags 1`] = `"Another sentence @[youtube](rJz4OaURJ6U)"`;
